# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md
SimpleEngineCore/: CMakeLists.txt
SimpleEngineCore/includes/SimpleEngineCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
SimpleEngineCore/includes/SimpleEngineCore/Utils/: test.hpp
SimpleEngineCore/src/SimpleEngineCore/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
SimpleEngineCore/src/SimpleEngineCore/Modules/: UIModule.cpp  UIModule.hpp
SimpleEngineCore/src/SimpleEngineCore/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
SimpleEngineCore/src/SimpleEngineCore/Utils/: test.cpp
SimpleEngineEditor/: CMakeLists.txt
SimpleEngineEditor/src/: main.cpp
